--- a/nlp/highlight.html
+++ b/nlp/highlight.html
@@ -6,14 +6,14 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <div><pre><div class="codearea" id="codearea" contenteditable="true"></div></pre>
+        <div>
+            <pre class="codearea" id="codearea" contenteditable="true"></pre>
             <div class="codearea" id="highlight"></div>
         </div>
     </body>
 </html>
 <script src="nl.js"></script>
 <script>
-
 
 
 function tokenaize(c) {
@@ -72,7 +72,7 @@ function tokenaize(c) {
                         scomment = p
                     }
                     if (c[p]=="\n") {
-                        token.push(["BCOMMENT",c.slice(scomment,p-1)])
+                        token.push(["BCOMMENT",c.slice(scomment,p)])
                         token.push(["CR","\n"])
                         scomment = p+1
                     }
@@ -138,10 +138,9 @@ function highlight() {
         let brcnt = 0
         let pacnt = 0
     for (let t=0;t<tokens.length;t++) {
-        thistoken = document.createElement("span")
-        inthistoken = document.createElement("pre")
-        inthistoken.innerHTML += tokens[t][1]
-        inthistoken.className = tokens[t][0]
+        thistoken = document.createElement("pre")
+        thistoken.innerHTML += tokens[t][1]
+        thistoken.className = tokens[t][0]
         let ccnt = ""
         {
             if (tokens[t][0].slice(1)=="BRACE") {
@@ -153,7 +152,7 @@ function highlight() {
                     ccnt = brcnt.toString();
                     brcnt--
                 }
-            inthistoken.className += " "+ccnt
+                thistoken.className += " "+ccnt
             }
             if (tokens[t][0].slice(1)=="PAREN") {
                 if (tokens[t][0][0]=="L") {
@@ -164,11 +163,10 @@ function highlight() {
                     ccnt = pacnt.toString();
                     pacnt--
                 }
-            inthistoken.className += " "+ccnt
+                thistoken.className += " "+ccnt
             }
         }
-        thistoken.appendChild(inthistoken)
-        outelm.appendChild(thistoken)
+        outelm.append(thistoken)
     }
 }
 outelm = document.getElementById("highlight")
@@ -176,19 +174,27 @@ codeelm = document.getElementById("codearea")
 codeelm.onkeyup = highlight
 codeelm.onkeydown = highlight
 
+codeelm.addEventListener("paste", function(e) { // 参考: https://qiita.com/tashinoso/items/5519a5fa56e7585d8a93
+    e.preventDefault();
+    var text = e.clipboardData.getData("text/plain");
+    document.execCommand("insertHTML", false, text);
+});
 
 highlight()
 
 </script>
 <style>
+    pre.codearea {
+        display: block;
+    }
     pre {
         margin: 0px;
-        height: min-content;
         display: inline;
     }
     .codearea {
         height: 100vh;
-        width: 70vw;
+        width: min-content;
+        min-width: 100vw;
         margin: 20px;
         padding: 30px;
         border-radius: 10px;
@@ -197,9 +203,7 @@ highlight()
         font-size: 23px;
         background: rgb(0, 0, 0,0);
         color: rgb(255, 255, 255);
-        border: 1px solid rgb(255, 255, 255);
-        word-break: break-all; 
-        overflow-wrap: break-word;
+        border: 0px;
         display: block;
     }
     body {
