--- a/nlp/highlight.html
+++ b/nlp/highlight.html
@@ -218,12 +218,8 @@ highlight()
 
 </script>
 <style>
-    @font-face {
-        font-family: 'notosansjp';
-        src: url(https://bem130.github.io/mainsite/NotoSansJP-Light.otf);
-    }
     * {
-        font-family: 'notosansjp';
+        font-family: monospace;
     }
     pre.codearea {
         display: block;
