--- a/nlp/highlight.html
+++ b/nlp/highlight.html
@@ -8,7 +8,7 @@
     <body>
         <div>
             <div id="linearea"></div>
-            <pre class="codearea" id="codearea" contenteditable="true" spellcheck="false"><br></pre>
+            <pre class="codearea" id="codearea" contenteditable="true" spellcheck="false" autocomplete="off"><br></pre>
             <div class="codearea" id="highlight" spellcheck="false"></div>
         </div>
     </body>
