--- a/nlmc/nlmc.html
+++ b/nlmc/nlmc.html
@@ -31,26 +31,34 @@ function run() {
 
 function tokenaize(c) {
         let searchtype = [
-            ["MNEM","mov"],
+            ["MNEM","get"],
+            ["MNEM","out"],
+            ["MNEM","ssp"],
             ["MNEM","add"],
             ["MNEM","sub"],
             ["MNEM","mul"],
-            ["MNEM","div"],
+            ["MNEM","and"],
+            ["MNEM","or"],
+            ["MNEM","xor"],
+            ["MNEM","not"],
+            ["MNEM","buffer"],
+            ["MNEM","inc"],
+            ["MNEM","dec"],
+            ["MNEM","rshift"],
+            ["MNEM","lshift"],
+            ["MNEM","equ"],
+            ["MNEM","less"],
+            ["MNEM","gret"],
+            ["MNEM","jmp"],
+            ["MNEM","ifjmp"],
+            ["MNEM","call"],
+            ["MNEM","ret"],
+            ["MNEM","pushvar"],
+            ["MNEM","popvar"],
+            ["MNEM","pushrel"],
+            ["MNEM","poprel"],
             ["MNEM","push"],
             ["MNEM","pop"],
-            ["MNEM","cmd"],
-            ["MNEM","jmp"],
-            ["MNEM","jz"],
-            ["MNEM","jnz"],
-            ["MNEM","js"],
-            ["REG","zf"],
-            ["REG","ret"],
-            ["REG","rax"],
-            ["REG","rdx"],
-            ["REG","rdi"],
-            ["REG","al"],
-            ["LABEL","label"],
-            ["COLON",","],
         ]
     let spc = c.split("\n");
     let cn = 0;
